<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<resources>
    <string name="app_name">copyrightedmediademo</string>
    <string name="please_input_user_id">Please input user id</string>
    <string name="please_input_rtc_token">Please input rtc token</string>
    <string name="invalid_user_id">invalid user id</string>
    <string name="please_input_room_id">Please input rtc room id</string>
    <string name="join_room">Join RTC Room</string>
    <string name="leave_room">Leave Room</string>
    <string name="anchor">Anchor</string>
    <string name="start_movie">Start Movie</string>
    <string name="init_copyrighted_media_sdk">init Copyrightedmedia sdk</string>
    <string name="start_play">Start Play</string>
    <string name="please_input_music_user_id">Please input music user id</string>
    <string name="please_input_song_id">Please input song id</string>
    <string name="song_load_success">The song is loaded successfully., songId: %s</string>
    <string name="song_load_failed">Failed to load the song %d %s</string>
    <string name="start_load">The song starts loading, songId: %s</string>
    <string name="copyright_token_has_expired">Copyright token expires, please try again later</string>
    <string name="default_channel">Default channel</string>
    <string name="cloud_music_channel">Cloud music</string>
    <string name="migu_channel">Migu</string>
</resources>